2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlFreeState.cs: Improve error reporting.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove multiple root
	element validation from here because it's not easy to override.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Add reference required for building.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Add glib dep.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Add
	AddMiscBeginTags member that adds begin tags for comments and CData.

2008-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs: Log an error region instead of
	a line/col location when possible.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs: Add overloads for logging with
	more accurate locations.

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove unused code.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add a Value property to XDocType.

	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs: Copture the doctype
	string when in tree mode.

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Copture doctype
	from the ParsedDocument if it's an XmlParsedDocument. Add utility
	GetBufferText method.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Avoid possible NRE in
	ToUpper/ToLower.

2008-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Updated.
