@@ -1,3 +1,9 @@
+2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track api
+	changes.
+
 2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
